// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextualBadge component rendering it should render according to theme: ContextualBadge Custom Theme 1`] = `
<span
  className="sc-bwzfXH bGpBBC"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 1`] = `
<span
  className="sc-bwzfXH bGpBBC"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 2`] = `
<span
  className="sc-bwzfXH hwJPVa"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 3`] = `
<span
  className="sc-bwzfXH bsVqqL"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 4`] = `
<span
  className="sc-bwzfXH cuTLAz"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 5`] = `
<span
  className="sc-bwzfXH bOHYgB"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 6`] = `
<span
  className="sc-bwzfXH dxGpoa"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 7`] = `
<span
  className="sc-bwzfXH gNWVsi"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 8`] = `
<span
  className="sc-bwzfXH cKmpcm"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each type: ContextualBadge Types 1`] = `
<span
  className="sc-bwzfXH bGpBBC"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render the default color and default type: ContextualBadge Default Color And Type 1`] = `
<span
  className="sc-bwzfXH bGpBBC"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;
